--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="carousel-inner">
         <!-- slide 1 -> index.html -->
         <div class="carousel-item active">
-          <img class="d-block w-100" src="images/monopolyOriginal.jpg" alt="Monopoly Game">
+          <img class="d-block w-100" src="images/monopoly_1920x810.jpg" alt="Monopoly Game">
           <a href="index.html">
             <div class="carousel-caption">
               <h1 class="h5 d-md-none">Board Game Store</h1>
@@ -83,7 +83,7 @@
         </div>
         <!-- slide 2 -> products.html -->
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/monopolyOriginal.jpg" alt="Second slide">
+          <img class="d-block w-100" src="images/monopoly_1920x810.jpg" alt="Second slide">
           <a href="products.html">
             <div class="carousel-caption">
               <h1 class="h5 d-md-none">Products</h1>
@@ -94,7 +94,7 @@
         </div>
         <!-- slide 3 -> newsletter.html -->
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/monopolyOriginal.jpg" alt="Third slide">
+          <img class="d-block w-100" src="images/monopoly_1920x810.jpg" alt="Third slide">
           <a href="newsletter.html">
             <div class="carousel-caption">
               <h1 class="h5 d-md-none">Newsletter</h1>
