--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         bottom:0;
         left:0;
         right:0;
-        background:rgba(0,0,0,0.7);
+        background:rgba(0,0,0,0.8);
       }
       .carousel-caption {
         /* vertically align elements, get rid of the extra bottom space */
@@ -74,32 +74,50 @@
         <div class="carousel-item active">
           <img class="d-block w-100" src="images/monopoly_1920x810.jpg" alt="Monopoly Game">
           <a href="index.html">
-            <div class="carousel-caption">
-              <h1 class="h5 d-md-none">Board Game Store</h1>
-              <h1 class="d-none d-md-block">Board Game Store</h1>
-              <p>Description</p>
+            <div class="carousel-caption d-md-none">
+              <h1 class="h5"><strong>Board Game Store</strong></h1>
+              <p>Your hobby is our passion.</p>
+            </div>
+            <div class="carousel-caption d-none d-md-block">
+              <h1><strong>Board Game Store</strong></h1>
+              <p>Who says that board games must always be expensive. With us, you have the opportunity to get the latest board games at incredible special prices.</p>
+              <p>We will show you what's new on the market and give you the opportunity to discover the most diverse novelties together with us and choose the treasures for the next games evening.</p>
+              <p>Your hobby is our passion.</p>
             </div>
           </a>
         </div>
         <!-- slide 2 -> products.html -->
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/monopoly_1920x810.jpg" alt="Second slide">
+          <img class="d-block w-100" src="images/catan_1920x810.jpg" alt="Second slide">
           <a href="products.html">
-            <div class="carousel-caption">
-              <h1 class="h5 d-md-none">Products</h1>
-              <h1 class="d-none d-md-block">Products</h1>
-              <p>Description</p>
+            <div class="carousel-caption d-md-none">
+              <h1 class="h5"><strong>Products</strong></h1>
+              <p>The latest board games at incredible special prices.<br>
+                <b>Check out our full offer!</b></p>
+            </div>
+            <div class="carousel-caption d-none d-md-block">
+              <h1><strong>Products</strong></h1>
+              <p>Our catalog includes a wide range of games. There is something for everyone.</p>
+              <p>The selection is unique and from young to old, everyone will find the right game here. Family games enable the whole family to spend a sociable time together.</p>
+              <p>With our expert games you and your friends will be entertained for hours and you will forget all about time. Get involved in something new and you will discover a new world of entertainment.</p>
+              <p><b>Check out our full offer!</b></p>
             </div>
           </a>
         </div>
         <!-- slide 3 -> newsletter.html -->
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/monopoly_1920x810.jpg" alt="Third slide">
+          <img class="d-block w-100" src="images/mailbox_1920x810.jpg" alt="Third slide">
           <a href="newsletter.html">
-            <div class="carousel-caption">
-              <h1 class="h5 d-md-none">Newsletter</h1>
-              <h1 class="d-none d-md-block">Newsletter</h1>
-              <p>Description</p>
+            <div class="carousel-caption d-md-none">
+              <h1 class="h5"><strong>Newsletter</strong></h1>
+              <p>Always up to date with the latest information and offers.<br>
+                <b>Get our newsletter!</b></p>
+            </div>
+            <div class="carousel-caption d-none d-md-block">
+              <h1><strong>Newsletter</strong></h1>
+              <p>With our newsletter you are always up to date. You will receive information about the latest developments in the industry and we will regularly present our latest products.</p>
+              <p>Don't miss any offers and promotions. </p>
+              <p><b>Get our newsletter!</b></p>
             </div>
           </a>
         </div>
