edited for validation

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           </li>
         </ul>
         <ul class="nav navbar-nav flex-row justify-content-center flex-nowrap">
-          <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/" tabindex="2"><i class="fa fa-facebook mr-2"></i></a> </li>
-          <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/" tabindex="2"><i class="fa fa-instagram"></i></a> </li>
+          <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/" tabindex="2"><i class="fa fa-facebook mr-2"></i><span class="sr-only">Facebook</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/" tabindex="2"><i class="fa fa-instagram"></i><span class="sr-only">Instagram</span></a></li>
       </ul>
       </div>
     </nav>
@@ -143,7 +143,7 @@
               <a href="product.html" tabindex="3">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
                 <div class="caption text-center">
-                  <h1 class="h5">La Cosa Nostra</h1>
+                  <h2 class="h5">La Cosa Nostra</h2>
                   <p class="text-warning">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -163,7 +163,7 @@
               <a href="product.html" tabindex="3">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
                 <div class="caption text-center">
-                  <h1 class="h5">La Cosa Nostra</h1>
+                  <h2 class="h5">La Cosa Nostra</h2>
                   <p class="text-warning">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -183,7 +183,7 @@
               <a href="product.html" tabindex="3">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
                 <div class="caption text-center">
-                  <h1 class="h5">La Cosa Nostra</h1>
+                  <h2 class="h5">La Cosa Nostra</h2>
                   <p class="text-warning">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -203,7 +203,7 @@
               <a href="product.html" tabindex="3">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
                 <div class="caption text-center">
-                  <h1 class="h5">La Cosa Nostra</h1>
+                  <h2 class="h5">La Cosa Nostra</h2>
                   <p class="text-warning">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
