--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="carousel-inner">
           <!-- slide 1 -> index.html -->
           <div class="carousel-item active">
-            <img class="d-block w-100" src="images/monopoly_1920x810.jpg" alt="Monopoly Game">
+            <img class="d-block w-100" src="images/monopoly_1920x810.jpg" alt="Game: Monopoly">
             <a href="index.html">
               <div class="carousel-caption d-md-none">
                 <h1 class="h5"><strong>Board Game Store</strong></h1>
@@ -82,7 +82,7 @@
           </div>
           <!-- slide 2 -> products.html -->
           <div class="carousel-item">
-            <img class="d-block w-100" src="images/catan_1920x810.jpg" alt="Second slide">
+            <img class="d-block w-100" src="images/catan_1920x810.jpg" alt="Game: Settlers of Catan">
             <a href="products.html">
               <div class="carousel-caption d-md-none">
                 <h1 class="h5"><strong>Products</strong></h1>
@@ -100,7 +100,7 @@
           </div>
           <!-- slide 3 -> newsletter.html -->
           <div class="carousel-item">
-            <img class="d-block w-100" src="images/mailbox_1920x810.jpg" alt="Third slide">
+            <img class="d-block w-100" src="images/mailbox_1920x810.jpg" alt="Mailbox">
             <a href="newsletter.html">
               <div class="carousel-caption d-md-none">
                 <h1 class="h5"><strong>Newsletter</strong></h1>
