edited for validation

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             <img class="d-block w-100" src="images/monopoly_1920x810.jpg" alt="Game: Monopoly">
             <a href="index.html">
               <div class="carousel-caption d-md-none">
-                <h1 class="h5"><strong>Board Game Store</strong></h1>
+                <p class="h5"><strong>Board Game Store</strong></p>
                 <p>Your hobby is our passion.</p>
               </div>
               <div class="carousel-caption d-none d-md-block">
-                <h1><strong>Board Game Store</strong></h1>
+                <p class="h1"><strong>Board Game Store</strong></p>
                 <p>Who says that board games must always be expensive. With us, you have the opportunity to get the latest board games at incredible special prices.</p>
                 <p>We will show you what's new on the market and give you the opportunity to discover the most diverse novelties together with us and choose the treasures for the next games evening.</p>
                 <p>Your hobby is our passion.</p>
@@ -85,12 +85,12 @@
             <img class="d-block w-100" src="images/catan_1920x810.jpg" alt="Game: Settlers of Catan">
             <a href="products.html">
               <div class="carousel-caption d-md-none">
-                <h1 class="h5"><strong>Products</strong></h1>
+                <p class="h5"><strong>Products</strong></p>
                 <p>The latest board games at incredible special prices.<br>
                   <b>Check out our full offer!</b></p>
               </div>
               <div class="carousel-caption d-none d-md-block">
-                <h1><strong>Products</strong></h1>
+                <p class="h1"><strong>Products</strong></p>
                 <p>Our catalog includes a wide range of games. Something for everyone.</p>
                 <p>The selection is unique and from young to old, everyone will find the right game here. Family games enable the whole family to spend a sociable time together.</p>
                 <p>With our expert games you and your friends will be entertained for hours and you will forget all about time. Discover a new world of entertainment.</p>
@@ -103,12 +103,12 @@
             <img class="d-block w-100" src="images/mailbox_1920x810.jpg" alt="Mailbox">
             <a href="newsletter.html">
               <div class="carousel-caption d-md-none">
-                <h1 class="h5"><strong>Newsletter</strong></h1>
+                <p class="h5"><strong>Newsletter</strong></p>
                 <p>Always up to date with the latest information and offers.<br>
                   <b>Get our newsletter!</b></p>
               </div>
               <div class="carousel-caption d-none d-md-block">
-                <h1><strong>Newsletter</strong></h1>
+                <p class="h1"><strong>Newsletter</strong></p>
                 <p>With our newsletter you are always up to date. You will receive information about the latest developments in the industry and we will regularly present our latest products.</p>
                 <p>Don't miss any offers and promotions. </p>
                 <p><b>Get our newsletter!</b></p>
