--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top border-bottom border-custom-color">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top border-bottom border-custom-color">
 
       <!-- Brand -->
       <a class="navbar-brand" href="index.html" tabindex="-1">
