--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Board Game Store</title>
+    <title>Board Game Store - Home</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -26,7 +26,7 @@
   
   </head>
 
-  <body>
+  <body class="d-flex flex-column">
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top border-bottom border-custom-color">
 
@@ -66,7 +66,7 @@
     </nav>
     <!-- Navigation Bar -->
     
-    <main>
+    <main id="page-content" class="bg-dark text-white">
       <!-- Carousel with link to other site pages -->
       <section class="border-bottom border-custom-color">
         <div id="indexCarousel" class="carousel slide" data-ride="carousel">  
@@ -158,7 +158,7 @@
       <!-- Carousel with link to other site pages -->
 
       <!-- new products section-->
-      <section class="bg-dark text-white">
+      <section>
         <div class="container">
           <div class="row">
             <h1 class="h5 mx-auto pt-2 pb-1 border-bottom border-custom-color border-custom-width d-sm-none">
@@ -257,7 +257,7 @@
 
 
     <!-- Footer -->
-    <footer class="bg-dark pt-4">
+    <footer id="sticky-footer" class="bg-dark pt-3">
 
       <!-- Footer Elements -->
       <div class="container">
