--- a/newsletter.html
+++ b/newsletter.html
@@ -1,1 +1,134 @@
-newsletter.html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Board Game Store - Newsletter</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/54348ea8af.js" crossorigin="anonymous"></script>
+
+    <!-- CSS for Bootstrap Carousel -->
+    <link rel="stylesheet" href="css/carousel.css">
+
+    <!-- CSS for customized Boostrap -->
+    <link rel="stylesheet" href="css/bs-custom.css">
+
+    <!-- CSS for Footer -->
+    <link rel="stylesheet" href="css/footer.css">
+
+    <style>
+    </style>
+  
+  </head>
+
+  <body class="d-flex flex-column">
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top border-bottom border-custom-color">
+
+      <!-- Brand -->
+      <a class="navbar-brand" href="index.html" tabindex="-1">
+      	<i class="fas fa-dice-d20 fa-spin fa-1x"></i> Board Game Store
+      </a>
+      <!-- Brand -->
+
+      <!-- Collapsed Menu Button-->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Collapsed Menu Button-->
+
+      <!-- Navigation Links + Social Links -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto text-center">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html" tabindex="1">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="products.html" tabindex="1">Products</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="newsletter.html" tabindex="1">Newsletter<span class="sr-only"> (current)</span></a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav flex-row justify-content-center flex-nowrap">
+          <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/" tabindex="1"><i class="fa fa-facebook mr-2"></i><span class="sr-only">Facebook</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/" tabindex="1"><i class="fa fa-instagram mr-2"></i><span class="sr-only">Instagram</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="https://www.twitter.com/" tabindex="1"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a></li>
+      </ul>
+      </div>
+      <!-- Navigation Links + Social Links -->
+
+    </nav>
+    <!-- Navigation Bar -->
+    
+    <main id="page-content" class="bg-dark text-white">
+
+      <!-- newsletter section-->
+      <section class="">
+        <div class="container">
+          <div class="row">
+            <h1 class="h5 mx-auto pt-2 pb-1 border-bottom border-custom-color border-custom-width d-sm-none">
+              <strong>Newsletter</strong>
+            </h1>
+            <h1 class="mx-auto pt-3 pb-1 border-bottom border-custom-color border-custom-width d-none d-sm-block">
+              <strong>Newsletter</strong>
+            </h1>
+          </div>
+        </div>
+      </section>
+      <!-- newsletter section-->
+    </main>
+
+
+    <!-- Footer -->
+    <footer id="sticky-footer" class="bg-dark pt-3">
+
+      <!-- Footer Elements -->
+      <div class="container">
+
+        <!-- Social buttons -->
+        <ul class="list-unstyled list-inline text-center">
+          <li class="list-inline-item">
+            <a class="btn-floating btn-facebook mx-1" href="https://www.facebook.com/" tabindex="3">
+              <i class="fab fa-facebook-f"></i><span class="sr-only">Facebook</span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn-floating btn-instagram mx-1" href="https://www.instagram.com/" tabindex="3">
+              <i class="fab fa-instagram"></i><span class="sr-only">Instagram</span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn-floating btn-twitter mx-1" href="https://www.twitter.com/" tabindex="3">
+              <i class="fab fa-twitter"></i><span class="sr-only">Twitter</span>
+            </a>
+          </li>
+        </ul>
+        <!-- Social buttons -->
+
+      </div>
+      <!-- Footer Elements -->
+
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3 border-top border-custom-color">© 2020 Copyright:
+        <a href="https://marcus3333.github.io/"> Marcus</a>
+      </div>
+      <!-- Copyright -->
+
+    </footer>
+    <!-- Footer -->
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  </body>
+</html>
