navbar: 'sticky-top' changed into 'fixed-top', main: added 'mt-2 pt-5', image: 'col-md-3' changed into 'col-lg-3'

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body class="d-flex flex-column">
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top border-bottom border-custom-color">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top border-bottom border-custom-color">
 
       <!-- Brand -->
       <a class="navbar-brand" href="index.html" tabindex="-1">
@@ -66,7 +66,7 @@
     </nav>
     <!-- Navigation Bar -->
     
-    <main id="page-content" class="bg-dark text-white">
+    <main id="page-content" class="bg-dark text-white mt-2 pt-5">
       <!-- Carousel with link to other site pages -->
       <section class="border-bottom border-custom-color">
         <div id="indexCarousel" class="carousel slide" data-ride="carousel">  
@@ -169,7 +169,7 @@
             </h1>
           </div>
           <div class="row">
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_1">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_1">
               <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                   <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -189,7 +189,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_2">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_2">
               <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                   <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -209,7 +209,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_3">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_3">
               <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                   <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -229,7 +229,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_4">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_4">
               <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                   <img src="images/product_500x500.png" alt="Product" style="width:100%">
