navbar: 'sticky-top' changed into fixed-top, main: 'mt-2 pt-5' added

--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
 
   <body class="d-flex flex-column">
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top border-bottom border-custom-color">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top border-bottom border-custom-color">
 
       <!-- Brand -->
       <a class="navbar-brand" href="index.html" tabindex="-1">
@@ -72,7 +72,7 @@
     </nav>
     <!-- Navigation Bar -->
     
-    <main id="page-content" class="bg-dark text-white">
+    <main id="page-content" class="bg-dark text-white mt-2 pt-5">
       <!-- Products section-->
       <section>
         <div class="container">
@@ -111,7 +111,7 @@
 
           <!-- all Products -->
           <div class="row">
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_1" gameCategory="familyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_1" gameCategory="familyGames">
               <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                   <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -136,7 +136,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_2" gameCategory="expertGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_2" gameCategory="expertGames">
               <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                   <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -161,7 +161,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_3" gameCategory="partyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_3" gameCategory="partyGames">
               <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                   <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -186,7 +186,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_4" gameCategory="familyGames expertGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_4" gameCategory="familyGames expertGames">
               <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                   <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -212,7 +212,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_5" gameCategory="familyGames partyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_5" gameCategory="familyGames partyGames">
                 <div class="img-thumbnail">
                   <a href="product.html" tabindex="2">
                     <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -238,7 +238,7 @@
                   </a>
                 </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_6" gameCategory="expertGames partyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_6" gameCategory="expertGames partyGames">
             <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -264,7 +264,7 @@
                 </a>
             </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_7" gameCategory="familyGames expertGames partyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_7" gameCategory="familyGames expertGames partyGames">
             <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -291,7 +291,7 @@
                 </a>
             </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_8" gameCategory="familyGames partyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_8" gameCategory="familyGames partyGames">
             <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -317,7 +317,7 @@
                 </a>
             </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_9" gameCategory="familyGames expertGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_9" gameCategory="familyGames expertGames">
                 <div class="img-thumbnail">
                   <a href="product.html" tabindex="2">
                     <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -343,7 +343,7 @@
                   </a>
                 </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_10" gameCategory="expertGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_10" gameCategory="expertGames">
             <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -368,7 +368,7 @@
                 </a>
             </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_11" gameCategory="familyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_11" gameCategory="familyGames">
             <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
@@ -393,7 +393,7 @@
                 </a>
             </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 p-2" id="Product_12" gameCategory="partyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_12" gameCategory="partyGames">
             <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
