--- a/newsletter.html
+++ b/newsletter.html
@@ -28,7 +28,7 @@
 
   <body class="d-flex flex-column">
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top border-bottom border-custom-color">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top border-bottom border-custom-color">
 
       <!-- Brand -->
       <a class="navbar-brand" href="index.html" tabindex="-1">
@@ -66,7 +66,7 @@
     </nav>
     <!-- Navigation Bar -->
     
-    <main id="page-content" class="bg-dark text-white">
+    <main id="page-content" class="bg-dark text-white mt-2 pt-5">
 
       <!-- newsletter section-->
       <section class="">
