--- a/product.html
+++ b/product.html
@@ -28,7 +28,7 @@
 
   <body class="d-flex flex-column">
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top border-bottom border-custom-color">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top border-bottom border-custom-color">
 
       <!-- Brand -->
       <a class="navbar-brand" href="index.html" tabindex="-1">
@@ -66,7 +66,7 @@
     </nav>
     <!-- Navigation Bar -->
     
-    <main id="page-content" class="bg-dark">
+    <main id="page-content" class="bg-dark text-white mt-2 pt-5">
       <!-- Carousel with link to other site pages -->
       <section class="border-bottom border-custom-color">
         <div id="indexCarousel" class="carousel slide" data-ride="carousel">  
@@ -158,7 +158,7 @@
       <!-- Carousel with link to other site pages -->
 
       <!-- new products section-->
-      <section class="bg-dark text-white">
+      <section>
         <div class="container">
           <div class="row">
             <h1 class="h5 mx-auto pt-2 pb-1 border-bottom border-custom-color border-custom-width d-sm-none">
