<p> changed to <div>, attribute 'gamecategory' to 'data-gamecategory'

--- a/products.html
+++ b/products.html
@@ -111,309 +111,309 @@
 
           <!-- all Products -->
           <div class="row">
-            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_1" gameCategory="familyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_1" data-gamecategory="familyGames">
               <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                   <img src="images/product_500x500.png" alt="Product" style="width:100%">
                   <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
-                    <p class="text-warning">
+                    <div class="text-warning">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <ul class="small">
                         <li>family game</li>
                       </ul>
-                    </p>
+                    </div>
                   </div>
                 </a>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_2" gameCategory="expertGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_2" data-gamecategory="expertGames">
               <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                   <img src="images/product_500x500.png" alt="Product" style="width:100%">
                   <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
-                    <p class="text-warning">
+                    <div class="text-warning">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <ul class="small">
                         <li>expert game</li>
                       </ul>
-                    </p>
+                    </div>
                   </div>
                 </a>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_3" gameCategory="partyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_3" data-gamecategory="partyGames">
               <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                   <img src="images/product_500x500.png" alt="Product" style="width:100%">
                   <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
-                    <p class="text-warning">
+                    <div class="text-warning">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <ul class="small">
                         <li>party game</li>
                       </ul>
-                    </p>
+                    </div>
                   </div>
                 </a>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_4" gameCategory="familyGames expertGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_4" data-gamecategory="familyGames expertGames">
               <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                   <img src="images/product_500x500.png" alt="Product" style="width:100%">
                   <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
-                    <p class="text-warning">
+                    <div class="text-warning">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <ul class="small">
                         <li>family game</li>
                         <li>expert game</li>
                       </ul>
-                    </p>
+                    </div>
                   </div>
                 </a>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_5" gameCategory="familyGames partyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_5" data-gamecategory="familyGames partyGames">
                 <div class="img-thumbnail">
                   <a href="product.html" tabindex="2">
                     <img src="images/product_500x500.png" alt="Product" style="width:100%">
                     <div class="caption text-center">
                       <h2 class="h5">La Cosa Nostra</h2>
-                      <p class="text-warning">
+                      <div class="text-warning">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                      </p>
-                      <p>
+                      </div>
+                      <div>
                         <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
-                      </p>
-                      <p>
+                      </div>
+                      <div>
                         <ul class="small">
                           <li>family game</li>
                           <li>party game</li>
                         </ul>
-                      </p>
+                      </div>
                     </div>
                   </a>
                 </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_6" gameCategory="expertGames partyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_6" data-gamecategory="expertGames partyGames">
             <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
                 <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
-                    <p class="text-warning">
+                    <div class="text-warning">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <ul class="small">
                         <li>expert game</li>
                         <li>party game</li>
                       </ul>
-                    </p>
+                    </div>
                 </div>
                 </a>
             </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_7" gameCategory="familyGames expertGames partyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_7" data-gamecategory="familyGames expertGames partyGames">
             <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
                 <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
-                    <p class="text-warning">
+                    <div class="text-warning">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <ul class="small">
                         <li>family game</li>
                         <li>expert game</li>
                         <li>party game</li>
                       </ul>
-                    </p>
+                    </div>
                 </div>
                 </a>
             </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_8" gameCategory="familyGames partyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_8" data-gamecategory="familyGames partyGames">
             <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
                 <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
-                    <p class="text-warning">
+                    <div class="text-warning">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <ul class="small">
                         <li>family game</li>
                         <li>party game</li>
                       </ul>
-                    </p>
+                    </div>
                 </div>
                 </a>
             </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_9" gameCategory="familyGames expertGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_9" data-gamecategory="familyGames expertGames">
                 <div class="img-thumbnail">
                   <a href="product.html" tabindex="2">
                     <img src="images/product_500x500.png" alt="Product" style="width:100%">
                     <div class="caption text-center">
                       <h2 class="h5">La Cosa Nostra</h2>
-                      <p class="text-warning">
+                      <div class="text-warning">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                      </p>
-                      <p>
+                      </div>
+                      <div>
                         <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
-                      </p>
-                      <p>
+                      </div>
+                      <div>
                         <ul class="small">
                           <li>family game</li>
                           <li>expert game</li>
                         </ul>
-                      </p>
+                      </div>
                     </div>
                   </a>
                 </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_10" gameCategory="expertGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_10" data-gamecategory="expertGames">
             <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
                 <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
-                    <p class="text-warning">
+                    <div class="text-warning">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <ul class="small">
                         <li>expert game</li>
                       </ul>
-                    </p>
+                    </div>
                 </div>
                 </a>
             </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_11" gameCategory="familyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_11" data-gamecategory="familyGames">
             <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
                 <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
-                    <p class="text-warning">
+                    <div class="text-warning">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <ul class="small">
                         <li>family game</li>
                       </ul>
-                    </p>
+                    </div>
                 </div>
                 </a>
             </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_12" gameCategory="partyGames">
+            <div class="col-12 col-sm-6 col-lg-3 p-2" id="Product_12" data-gamecategory="partyGames">
             <div class="img-thumbnail">
                 <a href="product.html" tabindex="2">
                 <img src="images/product_500x500.png" alt="Product" style="width:100%">
                 <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
-                    <p class="text-warning">
+                    <div class="text-warning">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                       <ul class="small">
                         <li>party game</li>
                       </ul>
-                    </p>
+                    </div>
                 </div>
                 </a>
             </div>
