--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <!-- Brand -->
       <a class="navbar-brand" href="index.html" tabindex="-1">
-      	<i class="fas fa-dice-d20 fa-spin fa-1x"></i> Board Game Store
+      	<i class="fas fa-dice-d20 fa-spin fa-1x" aria-hidden="true"></i> Board Game Store
       </a>
       <!-- Brand -->
 
@@ -46,7 +46,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto text-center">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html" tabindex="1">Home<span class="sr-only"> (current)</span></a>
+            <a class="nav-link" href="index.html" tabindex="1">Home
+              <span class="sr-only"> (current)</span>
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="products.html" tabindex="1">Products</a>
@@ -56,10 +58,25 @@
           </li>
         </ul>
         <ul class="nav navbar-nav flex-row justify-content-center flex-nowrap">
-          <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/" tabindex="1"><i class="fa fa-facebook mr-2"></i><span class="sr-only">Facebook</span></a></li>
-          <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/" tabindex="1"><i class="fa fa-instagram mr-2"></i><span class="sr-only">Instagram</span></a></li>
-          <li class="nav-item"><a class="nav-link" href="https://www.twitter.com/" tabindex="1"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a></li>
-      </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.facebook.com/" tabindex="1">
+              <i class="fa fa-facebook mr-2" aria-hidden="true" title="Facebook"></i>
+              <span class="sr-only">Facebook</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.instagram.com/" tabindex="1">
+              <i class="fa fa-instagram mr-2" aria-hidden="true" title="Instagram"></i>
+              <span class="sr-only">Instagram</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.twitter.com/" tabindex="1">
+              <i class="fa fa-twitter" aria-hidden="true" title="Twitter"></i>
+              <span class="sr-only">Twitter</span>
+            </a>
+          </li>
+        </ul>
       </div>
       <!-- Navigation Links + Social Links -->
 
@@ -176,14 +193,15 @@
                   <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <p class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </p>
                     <p>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i>
+                      <span class="sr-only">Price: </span>30.00 $
                     </p>
                   </div>
                 </a>
@@ -196,14 +214,15 @@
                   <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <p class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </p>
                     <p>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i>
+                      <span class="sr-only">Price: </span>30.00 $
                     </p>
                   </div>
                 </a>
@@ -216,14 +235,15 @@
                   <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <p class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </p>
                     <p>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i>
+                      <span class="sr-only">Price: </span>30.00 $
                     </p>
                   </div>
                 </a>
@@ -236,14 +256,15 @@
                   <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <p class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </p>
                     <p>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i>
+                      <span class="sr-only">Price: </span>30.00 $
                     </p>
                   </div>
                 </a>
@@ -266,17 +287,20 @@
         <ul class="list-unstyled list-inline text-center">
           <li class="list-inline-item">
             <a class="btn-floating btn-facebook mx-1" href="https://www.facebook.com/" tabindex="3">
-              <i class="fab fa-facebook-f"></i><span class="sr-only">Facebook</span>
+              <i class="fab fa-facebook-f" aria-hidden="true" title="Facebook"></i>
+              <span class="sr-only">Facebook</span>
             </a>
           </li>
           <li class="list-inline-item">
             <a class="btn-floating btn-instagram mx-1" href="https://www.instagram.com/" tabindex="3">
-              <i class="fab fa-instagram"></i><span class="sr-only">Instagram</span>
+              <i class="fab fa-instagram" aria-hidden="true" title="Instagram"></i>
+              <span class="sr-only">Instagram</span>
             </a>
           </li>
           <li class="list-inline-item">
             <a class="btn-floating btn-twitter mx-1" href="https://www.twitter.com/" tabindex="3">
-              <i class="fab fa-twitter"></i><span class="sr-only">Twitter</span>
+              <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>
+              <span class="sr-only">Twitter</span>
             </a>
           </li>
         </ul>
