changed bg-color for reviews

--- a/product.html
+++ b/product.html
@@ -196,7 +196,7 @@
             </div>
           </div>
           <!-- first review -->
-          <div class="row border border-custom-color mb-3">
+          <div class="row border border-custom-color mb-3 bg-secondary">
             <div class="col">
               <div class="row mt-2">
                 <div class="col text-warning">
@@ -221,14 +221,14 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col m-2 pt-3 border bg-secondary">
+                <div class="col m-2 pt-3 border bg-dark">
                   <p>Morbi sodales, elit at ullamcorper placerat, nunc tellus euismod sem, eu pellentesque ligula mauris a massa. Aenean augue elit, posuere nec nisl ut, molestie porttitor est. Mauris viverra ac justo eu vulputate. Mauris efficitur viverra felis feugiat mattis. Morbi imperdiet eleifend egestas. Morbi dapibus tempor mollis. Integer nec gravida augue, a feugiat massa. Vivamus hendrerit accumsan pulvinar. Donec vehicula sem enim, sed posuere turpis consectetur nec. Vestibulum non quam lobortis, rutrum nulla in, tristique elit. Sed id magna id diam interdum ultricies. Suspendisse vel massa ex. Nunc molestie id tellus sit amet scelerisque. Nullam ut ex eget lectus sagittis luctus ac vitae elit.</p>
                 </div>
               </div>
             </div>
           </div>
           <!-- second review -->
-          <div class="row border border-custom-color mb-3">
+          <div class="row border border-custom-color mb-3 bg-secondary">
             <div class="col">
               <div class="row mt-2">
                 <div class="col text-warning">
@@ -253,7 +253,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col m-2 pt-3 border bg-secondary">
+                <div class="col m-2 pt-3 border bg-dark">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse molestie nisl turpis, sit amet condimentum massa interdum sit amet. Vestibulum convallis iaculis nibh, et feugiat orci finibus nec. Praesent ac libero tempor, faucibus magna ut, dictum dui. Pellentesque interdum commodo nulla, eu vestibulum urna consequat quis. Nam rutrum tristique purus, accumsan vulputate nibh tristique sit amet. Duis pretium vehicula justo, in pharetra nisi. Sed pharetra massa velit, et faucibus metus congue in. Nunc ut interdum felis. Nulla id libero mi.</p>
                 </div>
               </div>
