short discription table breakpoint added

--- a/product.html
+++ b/product.html
@@ -97,7 +97,7 @@
           <!-- Short Description Table, Fotos, Videos, Price -->
           <div class="row pb-2">
             <!-- Fotos and Videos -->
-            <div class="col-sm-8">
+            <div class="col-sm-7 col-md-8">
               <div class="row pb-3">
                 <div class="col-6">
                   <a href="images/product.png" data-toggle="lightbox" data-gallery="mixedgallery">
@@ -124,7 +124,7 @@
               </div>
             </div>
             <!-- Short Description Table, Price -->
-            <div class="col-sm-4 mt-5">
+            <div class="col-sm-5 col-md-4 align-self-center">
               <div class="row">
                 <div class="col">
                   <table class="table table-dark table-bordered text-center">
