tabindex to product section added

--- a/product.html
+++ b/product.html
@@ -100,24 +100,24 @@
             <div class="col-sm-7 col-md-8">
               <div class="row pb-3">
                 <div class="col-6">
-                  <a href="images/product.png" data-toggle="lightbox" data-gallery="mixedgallery">
+                  <a href="images/product.png" data-toggle="lightbox" data-gallery="mixedgallery" tabindex="2">
                     <img src="images/product_500x500.png" class="img-fluid" alt="Game: La Cosa Nostra"> 
                   </a>
                 </div>
                 <div class="col-6">
-                  <a href="images/product_bw.png" data-toggle="lightbox" data-gallery="mixedgallery">
+                  <a href="images/product_bw.png" data-toggle="lightbox" data-gallery="mixedgallery" tabindex="2">
                     <img src="images/product_500x500_bw.png" class="img-fluid" alt="Game: La Cosa Nostra BW"> 
                   </a>
                 </div>                
               </div>
               <div class="row pb-3">
                 <div class="col-6">
-                  <a href="https://vimeo.com/97729815" data-remote="https://player.vimeo.com/video/97729815" data-toggle="lightbox" data-gallery="mixedgallery" class="playIcon">
+                  <a href="https://vimeo.com/97729815" data-remote="https://player.vimeo.com/video/97729815" data-toggle="lightbox" data-gallery="mixedgallery" class="playIcon" tabindex="2">
                     <img src="https://i.vimeocdn.com/video/492965934_640.jpg" class="img-fluid img-thumbnail" alt="Video: Regel-Einführung La Cosa Nostra">
                   </a>
                 </div>
                 <div class="col-6">
-                  <a href="https://vimeo.com/90851284" data-remote="https://player.vimeo.com/video/90851284" data-toggle="lightbox" data-gallery="mixedgallery" class="playIcon">
+                  <a href="https://vimeo.com/90851284" data-remote="https://player.vimeo.com/video/90851284" data-toggle="lightbox" data-gallery="mixedgallery" class="playIcon" tabindex="2">
                     <img src="https://i.vimeocdn.com/video/470170866_640.jpg" class="img-fluid img-thumbnail" alt="Video: La Cosa Nostra - Das Spiel um Macht und Geld">
                   </a>
                 </div>
